fixed windowContainer overflow

--- a/src/ui/components/WindowContainer/WindowContainer.module.scss
+++ b/src/ui/components/WindowContainer/WindowContainer.module.scss
@@ -41,7 +41,7 @@
   flex-grow: 1;
   background: $white;
   padding: 30px;
-  overflow: scroll;
+  overflow: auto;
   overflow-x: hidden;
   margin: 5px 5px 5px 4px;
   box-shadow: inset 2px 2px 0px #262626, inset -2px -2px 0px #f0f0f0,
